AC_INIT([toollabs], [1.0.4dev], [mpelletier@wikimedia.org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_TESTDIR([tests])

AM_INIT_AUTOMAKE([foreign no-dist silent-rules -Wall -Werror])
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CXX

AC_CONFIG_FILES([Makefile
                 jobutils/Makefile
                 jobutils/bin/Makefile
                 jobutils/man/Makefile
                 misctools/Makefile
                 src/Makefile
                 tests/Makefile])

AC_OUTPUT
